fixed navbar collapse

--- a/public/style.css
+++ b/public/style.css
@@ -105,12 +105,20 @@ h4 {
   margin-bottom: 0;
 }
 
-.navbar-login {
-  font-size: 1em;
+#search-collapse>.btn {
+  padding-left: 0
 }
 
-.basic-nav-dropdown {
-  margin: 0;
+#search {
+  margin-top: 0;
+}
+
+#search-collapse {
+  margin-top: -15px;
+}
+
+.navbar-login {
+  font-size: 1em;
 }
 
 .navbar .navbar-brand {
@@ -122,8 +130,15 @@ h4 {
   margin-bottom: 25px;
 }
 
+#cart-dropdown-collapse, #cart-dropdown {
+  margin-top: 0px;
+  margin-bottom: 15px;
+  padding-bottom: 0;
+}
+
 .input-group-btn:first-child>.btn, .input-group-btn:first-child>.btn-group {
   border: none;
+  padding-left: 0;
 }
 
 /*search bar text*/
@@ -131,11 +146,36 @@ h4 {
   color: black;
 }
 
-/*Removes hover color*/
-.navbar-default .navbar-nav>li>a {
+/*Account Dropdown*/
+
+#login-dropdown-collapse {
+  margin-bottom: 0;
+}
+
+/*.navbar-default .navbar-nav>li>a {
   color: black;
-  margin: 15px;
-  padding: 15px;
+  margin: 0px 15px 0px 15px;
+  padding: 0px 15px 0px 15px;
+}*/
+
+.navbar-default .navbar-nav>.open>a {
+  background: none;
+  margin: 0px 15px 0px 15px;
+  padding: 0px 15px 0px 15px;
+}
+
+.navbar-nav .open .dropdown-menu {
+  border: solid 0.5px;
+  font-size: 12px;
+  margin-bottom: 10px;
+  width: 50px;
+  margin-left: 15px;
+}
+
+.navbar-default .navbar-nav>.open>a,
+.navbar-default .navbar-nav>.open>a:focus,
+.navbar-default .navbar-nav>.open>a:hover {
+  background: none;
 }
 
 .navbar-default .navbar-categories>li>a {
@@ -191,8 +231,18 @@ sup {
   text-decoration: none;
 }
 
+#lower-nav-collapse {
+  margin-top: -25px;
+  margin-bottom: -25px;
+}
+
+.lower-nav {
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
 #lower-nav {
-  right: 80px;
+  right: 70px;
 }
 
 .navbar-form {
@@ -204,6 +254,10 @@ sup {
   border-bottom-right-radius: 0px !important;
 }
 
+.input-group {
+  display: block;
+}
+
 .basic-nav-dropdown .dropdown-toggle {
   margin: 15px;
   padding: 15px;
@@ -213,7 +267,7 @@ sup {
   border: black;
   overflow: visible;
   width: 220px;
-  margin: 15px;
+  margin: 10px;
   padding-top: 8px;
 }
 
